# cel-context

./: CHANGELOG.md  Cargo.toml  README.md
examples/: context_snapshot.rs  dump_context.rs
src/: confidence.rs  element.rs  events.rs  lib.rs  merge.rs  resolve.rs  watchdog.rs
tests/: integration.rs  live_e2e.rs  vision_fallback.rs
