[package]
name = "cel-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable context snapshots for AI agents. Normalize any stream into reusable elements and point-in-time snapshots."
keywords = ["ai", "agent", "context", "ui", "automation"]
categories = ["data-structures", "asynchronous"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
