[package]
name = "cel-context"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dimpagk92/cel-context"
description = "Portable context snapshots for AI agents. Normalize any stream into reusable elements and point-in-time snapshots."
keywords = ["ai", "agent", "context", "ui", "automation"]
categories = ["data-structures", "asynchronous"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
